truncation fixes

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 .card-product {
   overflow: hidden;
-  height: 150px;
+  height: 165px;
   // box-shadow: 0 0 15px rgba(0,0,0,0.2);
   background: $off-white;
   display: flex;
